GET /gfe/features/{locus} added
